Added example Smart Contracts and two functions to views.py _get_stats(): This function returns some basic statistics about the code of a smart contract. Could help with visualization and sorting code.
_apply_mutation(): This function returns a list of mutated operations
for a given smart contract. Allows for more testing to be done for each.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+docker==3.3.0
+docker-pycreds==0.2.3
 Flask==0.12.2
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 pandas==0.22.0
+regex==2018.2.21
 SQLAlchemy==1.2.4
 Werkzeug==0.14.1
 WTForms==2.1
-docker==3.3.0
-docker-pycreds==0.2.3
