--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 docker==3.3.0
 docker-pycreds==0.2.3
+docutils==0.14
 Flask==0.12.2
+Flask-Cors==3.0.3
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+numpy==1.14.3
 pandas==0.22.0
 regex==2018.2.21
 SQLAlchemy==1.2.4
